test/variables/sungeun/refvar-compare-nil.good
refvar-compare-nil.chpl:1: error: References must be initialized
